
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct xor2_key {struct xor2_key* next; struct xor2_key* prev; } ;


 int free (struct xor2_key*) ;

void free_p_xor2_key(struct xor2_key *node)
{
    struct xor2_key *temp = 0;

    if(node)
    {
        temp = node->prev;
        while(node->next)
        {
            node=node->next;
            free(node->prev);
        }
        free(node);
    }
    if(temp)
    {
        while(temp->prev)
        {
            temp=temp->prev;
            free(temp->next);
        }
        free(temp);
    }
}
