; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/generator/extr_13286.c_free_p_xor2_key.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/generator/extr_13286.c_free_p_xor2_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xor2_key = type { %struct.xor2_key*, %struct.xor2_key* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @free_p_xor2_key(%struct.xor2_key* %0) #0 {
  %2 = alloca %struct.xor2_key*, align 8
  %3 = alloca %struct.xor2_key*, align 8
  store %struct.xor2_key* %0, %struct.xor2_key** %2, align 8
  store %struct.xor2_key* null, %struct.xor2_key** %3, align 8
  %4 = load %struct.xor2_key*, %struct.xor2_key** %2, align 8
  %5 = icmp ne %struct.xor2_key* %4, null
  br i1 %5, label %6, label %26

6:                                                ; preds = %1
  %7 = load %struct.xor2_key*, %struct.xor2_key** %2, align 8
  %8 = getelementptr inbounds %struct.xor2_key, %struct.xor2_key* %7, i32 0, i32 1
  %9 = load %struct.xor2_key*, %struct.xor2_key** %8, align 8
  store %struct.xor2_key* %9, %struct.xor2_key** %3, align 8
  br label %10

10:                                               ; preds = %15, %6
  %11 = load %struct.xor2_key*, %struct.xor2_key** %2, align 8
  %12 = getelementptr inbounds %struct.xor2_key, %struct.xor2_key* %11, i32 0, i32 0
  %13 = load %struct.xor2_key*, %struct.xor2_key** %12, align 8
  %14 = icmp ne %struct.xor2_key* %13, null
  br i1 %14, label %15, label %23

15:                                               ; preds = %10
  %16 = load %struct.xor2_key*, %struct.xor2_key** %2, align 8
  %17 = getelementptr inbounds %struct.xor2_key, %struct.xor2_key* %16, i32 0, i32 0
  %18 = load %struct.xor2_key*, %struct.xor2_key** %17, align 8
  store %struct.xor2_key* %18, %struct.xor2_key** %2, align 8
  %19 = load %struct.xor2_key*, %struct.xor2_key** %2, align 8
  %20 = getelementptr inbounds %struct.xor2_key, %struct.xor2_key* %19, i32 0, i32 1
  %21 = load %struct.xor2_key*, %struct.xor2_key** %20, align 8
  %22 = call i32 @free(%struct.xor2_key* %21)
  br label %10

23:                                               ; preds = %10
  %24 = load %struct.xor2_key*, %struct.xor2_key** %2, align 8
  %25 = call i32 @free(%struct.xor2_key* %24)
  br label %26

26:                                               ; preds = %23, %1
  %27 = load %struct.xor2_key*, %struct.xor2_key** %3, align 8
  %28 = icmp ne %struct.xor2_key* %27, null
  br i1 %28, label %29, label %46

29:                                               ; preds = %26
  br label %30

30:                                               ; preds = %35, %29
  %31 = load %struct.xor2_key*, %struct.xor2_key** %3, align 8
  %32 = getelementptr inbounds %struct.xor2_key, %struct.xor2_key* %31, i32 0, i32 1
  %33 = load %struct.xor2_key*, %struct.xor2_key** %32, align 8
  %34 = icmp ne %struct.xor2_key* %33, null
  br i1 %34, label %35, label %43

35:                                               ; preds = %30
  %36 = load %struct.xor2_key*, %struct.xor2_key** %3, align 8
  %37 = getelementptr inbounds %struct.xor2_key, %struct.xor2_key* %36, i32 0, i32 1
  %38 = load %struct.xor2_key*, %struct.xor2_key** %37, align 8
  store %struct.xor2_key* %38, %struct.xor2_key** %3, align 8
  %39 = load %struct.xor2_key*, %struct.xor2_key** %3, align 8
  %40 = getelementptr inbounds %struct.xor2_key, %struct.xor2_key* %39, i32 0, i32 0
  %41 = load %struct.xor2_key*, %struct.xor2_key** %40, align 8
  %42 = call i32 @free(%struct.xor2_key* %41)
  br label %30

43:                                               ; preds = %30
  %44 = load %struct.xor2_key*, %struct.xor2_key** %3, align 8
  %45 = call i32 @free(%struct.xor2_key* %44)
  br label %46

46:                                               ; preds = %43, %26
  ret void
}

declare dso_local i32 @free(%struct.xor2_key*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
